feat: implement brands index methods and show item by id + swagger update + test
